# opus-clip-uploader

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  README_en.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/scripts/: Build-Windows.ps1  build-macos  build-ubuntu  prepare-ffmpeg-runtime.mjs
.github/scripts/utils.zsh/: setup_ubuntu
.github/workflows/: build-project.yaml  check-format.yaml
artifacts/training/: training-run-manifest.json
artifacts/training/explanation/: training-run-manifest.json
artifacts/training/reports/: boundary-calibration.json
cmake/common/: buildspec_common.cmake
cmake/linux/: defaults.cmake
cmake/macos/resources/: distribution.in
cmake/windows/: buildspec.cmake  compilerconfig.cmake
data/gpt-prompts/: opus-curation.ini
data/locale/: en-US.ini  pt-BR.ini
docs/: boundary-feedback-calibration.md  clip-scoring-mvp.md  documentacao_pipeline_scoring_plugin_cortes.md  semantic-scoring-mvp.md
src/: plugin-main.cpp  plugin-support.c.in  plugin-support.h
src/auth/: google-oauth.cpp  google-oauth.hpp  oauth-callback-server.cpp  oauth-callback-server.hpp
src/curation/: curation-intent.cpp  curation-intent.hpp  curation-preset-profile.cpp  curation-preset-profile.hpp  curation-preset.cpp  curation-preset.hpp  curation-rules.cpp  curation-rules.hpp  curation-signals.cpp  curation-signals.hpp  opus-prompt-renderer.cpp  opus-prompt-renderer.hpp
src/curation/analysis/: named-reference-detector.cpp  named-reference-detector.hpp
src/curation/compiler/: opus-prompt-compiler.cpp  opus-prompt-compiler.hpp  opus-prompt-fallback.cpp  opus-prompt-guard.cpp  opus-prompt-output-normalizer.cpp  opus-prompt-plan-renderer.cpp  prompt-compiler-internal.hpp  prompt-compiler-target.cpp  prompt-compiler-text.cpp  prompt-compiler-viewer.cpp  prompt-quality-gate.cpp  prompt-quality-gate.hpp
src/curation/domain/: curation-plan.hpp
src/curation/feedback/: boundary-calibration.cpp  boundary-calibration.hpp  curation-feedback-detail.hpp  curation-feedback-memory-conflicts.cpp  curation-feedback-memory-rules.cpp  curation-feedback-records.cpp  curation-feedback-store.cpp  curation-feedback-store.hpp
src/curation/prompt/: curation-prompt-recipe.cpp  curation-prompt-recipe.hpp
src/curation/range/: curation-range-strategy.cpp  curation-range-strategy.hpp  viewer-message-focus-range.cpp  viewer-message-focus-range.hpp  viewer-message-range-strategy.cpp  viewer-message-range-strategy.hpp
src/curation/rules/: advice-answer-rule.cpp  advice-answer-rule.hpp  auto-rule.cpp  auto-rule.hpp  curation-preset-rule.hpp  curation-rule-engine.cpp  curation-rule-engine.hpp  curation-rule-helpers.cpp  curation-rule-helpers.hpp  emotional-reaction-rule.cpp  emotional-reaction-rule.hpp  explanation-rule.cpp  explanation-rule.hpp  opinion-rule.cpp  opinion-rule.hpp  story-arc-rule.cpp  story-arc-rule.hpp  tutorial-step-rule.cpp  tutorial-step-rule.hpp  viewer-message-response-rule.cpp  viewer-message-response-rule.hpp
src/curation/scoring/: arc-dp-boundary-refiner.cpp  arc-dp-boundary-refiner.hpp  boundary-refinement-stage.cpp  boundary-refinement-stage.hpp  candidate-arc-planner.cpp  candidate-arc-planner.hpp  candidate-beam-expander.cpp  candidate-beam-expander.hpp  candidate-builder.cpp  candidate-builder.hpp  candidate-dedupe.hpp  candidate-generator.cpp  candidate-generator.hpp  candidate-quality-gate-recovery.cpp  candidate-quality-gate-shape.cpp  candidate-quality-gate-support.cpp  candidate-quality-gate.cpp  candidate-quality-gate.hpp  candidate-quality-rules.cpp  candidate-quality-rules.hpp  candidate-range-utils.cpp  candidate-range-utils.hpp  candidate-source-builder.cpp  candidate-source-builder.hpp  candidate-stage-limiter.cpp  candidate-stage-limiter.hpp  cheap-clip-scorer.cpp  cheap-clip-scorer.hpp  clip-candidate.hpp  clip-ranker.cpp  clip-ranker.hpp  clip-scoring-pipeline-detail.hpp  clip-scoring-pipeline-diagnostics.cpp  clip-scoring-pipeline-feedback-replay.cpp  clip-scoring-pipeline-novelty-exploration.cpp  clip-scoring-pipeline-option-mappers.cpp  clip-scoring-pipeline-summary.cpp  clip-scoring-pipeline-summary.hpp  clip-scoring-pipeline.cpp  clip-scoring-pipeline.hpp  (+55 more)
src/curation/service/: curation-service.cpp  curation-service.hpp
src/gpt/: gpt-prompt-client.cpp  gpt-prompt-client.hpp  gpt-prompt-store.cpp  gpt-prompt-store.hpp  openai-chat-payload.cpp  openai-chat-payload.hpp
src/models/: curation-settings.hpp  transcript.hpp  upload-result.hpp
src/opus/: opus-api-types.hpp  opus-clip-client.cpp  opus-clip-client.hpp  opus-curation-payload-builder.cpp  opus-curation-payload-builder.hpp
src/transcription/: realtime-transcription-service.cpp  realtime-transcription-service.hpp  transcript-store.cpp  transcript-store.hpp  whisperx-alignment-service.cpp  whisperx-alignment-service.hpp  whisperx-settings.cpp  whisperx-settings.hpp
src/ui/: advanced-settings-tree.cpp  advanced-settings-tree.hpp  curation-transcript-preparation.cpp  curation-transcript-preparation.hpp  gpt-review-prompt.cpp  gpt-review-prompt.hpp  manual-review-actions.cpp  review-scoring-preparation.cpp  review-scoring-preparation.hpp  settings-dialog.cpp  ui-actions.hpp  ui-common.cpp  ui-common.hpp  ui.cpp  ui.hpp  upload-confirm-dialog.cpp  upload-flow.cpp  upload-flow.hpp  upload-review-dialog.cpp  upload-review-dialog.hpp  upload-review-flow.cpp  video-editor-actions.cpp  video-marker-editor.cpp  video-marker-editor.hpp
src/utils/: config.cpp  config.hpp  file.cpp  file.hpp  request.cpp  request.hpp
src/worker/: upload-worker.cpp  upload-worker.hpp
tools/: analyze_boundary_feedback.py  build_feedback_ranker_dataset.py  calibrate_boundary_thresholds.py  candidate_snapshot_join.py  evaluate_rankers.py  export_qwen_embedding_dataset.py  export_qwen_reranker_dataset.py  migrate_auto_feedback_profile.py  train_feedback_ranker.py  train_gbdt_ranker.py  train_model.py  train_qwen3_reranker_lora.py  training_common.py  whisperx_align_worker.py
(+25 files in other folders)
